# blockeditor

./: .gitignore  CMakeLists.txt  README.md
CMake/: cotire.cmake
examples_scripts/: echo.lua  echo.lua~  echo_2.lua
include/: main.h  mainwindow.h  minimapview.h
include/item/: abstractelement.h  elementbuilder.h  item.h  layout.h  standardelementbuilder.h
include/item/state/: elementchanged.h  elementinvalid.h  elementstable.h  elementstate.h  elementvalid.h
include/scene/: blockscene.h  elementobserver.h  mimedata.h  parser.h  reparser.h  sceneeventobserver.h  scenestate.h
include/scene/command/: changemarkedcommand.h  command.h  cursormovecommand.h  dragelemententercommand.h  dragelementleavecommand.h  dropelementcommand.h  moveelementcommand.h  selectitemcommand.h  writeitemcommand.h
include/style/: style.h  styleutil.h
libs/LuaState/include/: LuaState.h
scripts/: core.lua  init.lua  parser.lua
scripts/grammars/lua/: style.lua  style_new.lua
src/: main.cpp  mainwindow.cpp  minimapview.cpp
src bc jurcany/: highlighter.cpp  lineeditor.cpp  main.cpp  mainview.cpp  mainwindow.cpp
src bc jurcany/item/: abstractelement.cpp  blankItem.cpp  item.cpp  layout.cpp  textitem.cpp
src bc jurcany/scene/: blockscene.cpp  linenumbers.cpp  parser.cpp  sceneeventobserver.cpp
src bc jurcany/scene/command/: changemarkedcommand.cpp  command.cpp  cursormovecommand.cpp  dragelemententercommand.cpp  dragelementleavecommand.cpp  dropelementcommand.cpp  moveelementcommand.cpp  selectitemcommand.cpp
src bc jurcany/style/: style.cpp  styleutil.cpp
src/item/: abstractelement.cpp  item.cpp  layout.cpp  standardelementbuilder.cpp
src/item/state/: elementchanged.cpp  elementinvalid.cpp  elementstable.cpp  elementstate.cpp  elementvalid.cpp
src/scene/: blockscene.cpp  elementobserver.cpp  mimedata.cpp  parser.cpp  reparser.cpp  sceneeventobserver.cpp  scenestate.cpp
src/scene/command/: changemarkedcommand.cpp  cursormovecommand.cpp  dragelemententercommand.cpp  dragelementleavecommand.cpp  dropelementcommand.cpp  moveelementcommand.cpp  selectitemcommand.cpp  writeitemcommand.cpp
src/style/: style.cpp
